# ChangeLog for sys-devel/make
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.138 2015/03/06 06:49:48 jer Exp $

  06 Mar 2015; Jeroen Roovers <jer@gentoo.org> make-4.1-r1.ebuild:
  Stable for HPPA (bug #540868).

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> make-4.1-r1.ebuild:
  Stable for ppc, wrt bug #540868

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> make-4.1-r1.ebuild:
  Stable for ia64, wrt bug #540868

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> make-4.1-r1.ebuild:
  Stable for sparc, wrt bug #540868

  25 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> make-4.1-r1.ebuild:
  x86 stable wrt bug #540868

  25 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> make-4.1-r1.ebuild:
  amd64 stable wrt bug #540868

  23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> make-4.0-r1.ebuild:
  ppc64 stable wrt bug #524530

  23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> make-4.0-r1.ebuild:
  alpha stable wrt bug #524530

  11 Nov 2014; Agostino Sarubbo <ago@gentoo.org> make-4.0-r1.ebuild:
  Stable for ia64, wrt bug #524530

  10 Nov 2014; Agostino Sarubbo <ago@gentoo.org> make-4.0-r1.ebuild:
  Stable for ppc, wrt bug #524530

  04 Nov 2014; Agostino Sarubbo <ago@gentoo.org> make-4.0-r1.ebuild:
  Stable for sparc, wrt bug #524530

  03 Nov 2014; Mike Frysinger <vapier@gentoo.org> make-4.0-r1.ebuild:
  Mark arm64/m68k/s390/sh stable.

  03 Nov 2014; Mike Frysinger <vapier@gentoo.org> make-3.80-r4.ebuild:
  Update SRC_URI to use GNU mirror.

  03 Nov 2014; Mike Frysinger <vapier@gentoo.org> make-3.80-r4.ebuild:
  Update SRC_URI to use GNU mirror.

*make-4.1-r1 (20 Oct 2014)

  20 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> -make-4.1.ebuild,
  +make-4.1-r1.ebuild, +files/make-4.1-fix_null_returns_from_ttyname.patch:
  Revbump to fix a segfault when running make without /dev/pts being mounted
  (bug #525546).

  16 Oct 2014; Markus Meier <maekke@gentoo.org> make-4.0-r1.ebuild: