@@ -3,11 +3,11 @@ DEPEND=>=virtual/udev-180 !<sys-fs/udev-186 !<sys-apps/openrc-0.13
 DESCRIPTION=udev startup scripts for openrc
 EAPI=5
 HOMEPAGE=http://www.gentoo.org
-KEYWORDS=~alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86
+KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86
 LICENSE=GPL-2
 RDEPEND=>=virtual/udev-180 !<sys-fs/udev-186 !<sys-apps/openrc-0.13
 RESTRICT=test
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~williamh/dist/udev-init-scripts-27.tar.bz2
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=a2b93b470dd4e62ca8f867b9ac9bc995
+_md5_=9374702c4ef4ed6568f3abf408afe8bb
