@@ -30,13 +30,23 @@ EBUILD make-3.80-r4.ebuild 1133 SHA256 b55915a7f88f740a64c579c80825d423c4c22111a
 EBUILD make-3.81-r2.ebuild 1307 SHA256 e9869620c7d244c93b029362a4e370320ac8c17a4f509d9b8c3e8e8abcb2c234 SHA512 7b439eb63e17fe4fff7bb854c52c6976c41457eb0932da0c83479f2fe1fc50111d58dd0e7f6a66dd1aeb0b76e2aac7b3643b2d6883cf378f0916635dae97de56 WHIRLPOOL 7ad244e63180910b8a3172e03143aba27b56d573e16ddb14e0baf0d86f48ff9135f7b2b6e93b36e8f27c33dc2e5efbd3684cf9a55488c273c12ada8e66cd58cf
 EBUILD make-3.82-r4.ebuild 1880 SHA256 cc109e408ae4c430b4db2c980dc25a463a7e7eccc1d4a87cae9fc39bcd4c4095 SHA512 cf638ad9dc585febc99cccd982aaed70d0659847fd658c742ea9554a1e86f09fd7eccede9eb0e146f5aed4e48810b704642c93ec349fc30c12981af8f61284b4 WHIRLPOOL e133c760479ad6ec679d6d9dd1cfaeafbcce22432a99fd3c824565e6603eda4c2920beae2b105faa1bf74de70cc767bb5c4c6b37509bcc14548d6f7b7423a8bd
 EBUILD make-4.0-r1.ebuild 1478 SHA256 b756465b4b932082fc80abe0b55203a01bc4617646492bee5449999630a0a718 SHA512 768bece8211b71d461316ebee0fda3dde97d0f0a2636449c798e7daf4a3fd8676baacd34e6f6b836f588f81cc4bdaf526d3e96511dd8d36201c199ea15493248 WHIRLPOOL 592ade7419be37a2896b3233a66469aeaebbc04907548af7c452fe926377d62b23761e60bf9bbeb62efc0b42357150faa3591aa4aafdc264abed14130a00a165
-EBUILD make-4.1-r1.ebuild 1490 SHA256 352f6c30bb41dde46dee9524fb521e5d5981fcd3e8191335ed2560db3a84b9b6 SHA512 6f4dfb7ad14d750bea633f5b8a3efa8916a7a4ca023287d34dbb49bce322922277e8f3b186bcc12843cb29854987d3b310e0407dd53e564d8c94b6f5c30fc50a WHIRLPOOL 9d75c481248664cff5b2ea2ad6c4afe163530f03763d4f0613d31f399e8ee2f906bfecff3450b04e439ab4442342c2c8470480cefa76915c91589276207b8704
-MISC ChangeLog 17944 SHA256 53093f57e6478344c584e4268217197b2e41f9f0650eb44702d08b33fb1415e4 SHA512 cc185a866d2586bbba32d75e8382be3a0fed3914703eb10cc599b3270f7938f0a2ec4e545627e961cf957fcf0c594243772c792c23300486c58ba878f673e4f4 WHIRLPOOL fed2daac89e9b0e029a28dde25827410e6bf19c85c84acc5a01d3d7212830efc0804d040a5d6f8412cd2f4bb174ae706dc94d2dc2d02e83f35656315817906bb
+EBUILD make-4.1-r1.ebuild 1494 SHA256 5e1be4af2a447aaded74ae056b398fd1f51657e2c5513599c0ded5420242bb86 SHA512 8e4207f786df8906a90021d6af1b2d22c30e39d42b6ff71cde8838f5807d413ff172382d6a9a4a9a6c0c13c980a2e48140f78db461ccece0137b8a67e6b46e56 WHIRLPOOL 9f44adda8204d29dc847a08c5828d9d6ab04715bd93aaf2be411cb5c21f024f0757bebf22048647381e3f2e32926f74d3f28b63b49a9ba918c8c228de40b318a
+MISC ChangeLog 18047 SHA256 d7640433e0b6459b65c26e10c52b391e7315688a2a3b059ad59adeb48797403a SHA512 fb5800280af03f7440de97bde9a258b3f7b3967576375cc5b8f655e7dec3df536d0b8340f0d01fda9fa800ae1d97bbe0d478c32656528bc019d74441f63ab260 WHIRLPOOL 8d8c9862c5951ce1f0654dcd33247e31e9460943a4fcf85af9a458f19c0fb80e2d610e8a6aa4db852961cc0d96186a3f0806a858d0a4f31de70eec6e86c2c9bb
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT5Tg4ACgkQVWmRsqeSphOTngCeO5GIHHAzXC6ixOJdh0ycYYIW
-u2MAnA0cUcofgHj8MjbiW8ImLLDZlIhF
-=xa2i
+iQIcBAEBCAAGBQJVBiORAAoJEA/daC2XTKcqzf8P/3ZId13MK2PJgv/XaVk4jJ5r
+CGPgYd9tUFMvpDAb/K6XEr4s5ZWYfFXQ0JdYsryMciYCYmtiVq0E18+bT7WGjSJm
+7R+SLoTAcxh1ZtBMRUMeLuQ+Zknt6YuwLHUsgP9MWML3+g+0Udovvf2pNBOH0WkC
+Mp8pb2AfAsSCDmv4AvtVxIC5eeqmsr8P31iXdyR2FxxaSYbms+YevfVxXWS+lxPb
+IMjLw5RViPtDFT5/0XiznsfkM8nuoCPImkZ91kmOdPfEe3WT+RZBezVxw8WH7H+I
+89e5JLXFhZURrFTEJ9WMhm9HmWbXjQwdgWEyczO7Guew1UTxUVFzfB2CRNNpqCmq
+a9mBgs5ScGEw25pfIYQELho9JqKWtdw58mHX/ty5aa3kTjzeiyteU+T96E4JFjRM
+klfxhtFR1HYP0U4IALlJVtELPFkr7I8gyv/Nzgi3+voYf1Wa3cCyQvopPZGPkLbg
+awh6lX/291SBfvNdAqLrwEsLQ+xUCDYxeo4akhKl0lsGBL499jNpXk5dxCF2Hdww
+wG/9NC9c1pIzIWB9Wiw45oqg2wyXJm54/nMkmVt/38qjF2kRrDRGmYqDne58FFD0
+MNTldj9h7kQ7DUF0EqSKTuE2OCbH4sF7HmNgBncYlq6xmcANWFAYInlDgUUlmcxl
+J8cOHajnGMIlijwJu6Re
+=JBU9
 -----END PGP SIGNATURE-----
