@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/udev-init-scripts
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.113 2015/02/28 22:25:44 jmorgan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.114 2015/03/16 00:13:27 mattst88 Exp $
+
+  16 Mar 2015; Matt Turner <mattst88@gentoo.org> udev-init-scripts-27.ebuild:
+  alpha stable, bug 531602.
 
   28 Feb 2015; Jack Morgan <jmorgan@gentoo.org> udev-init-scripts-27.ebuild:
   sparc stable wrt bug #531602 (for real)
